feat: RAG架构初始版，目前暂时没有写入功能，RAG内容写死